# fractal-arch-pathlight-demo

./: .env  .gitignore  .melos.yaml  .mise.toml  Cargo.toml  justfile  lefthook.yml  pubspec.yaml
app/client/pathlight/: README.md  pubspec.yaml
app/client/pathlight/android/app/: build.gradle.kts
app/client/pathlight/android/app/src/main/: AndroidManifest.xml
app/client/pathlight/android/app/src/main/kotlin/com/example/pathlight/: MainActivity.kt
app/client/pathlight/ios/Runner/: Info.plist
app/client/pathlight/ios/Runner.xcodeproj/: project.pbxproj
app/client/pathlight/lib/: auth_guard.dart  main.dart  router.dart  router.gr.dart
app/client/pathlight/linux/: CMakeLists.txt
app/client/pathlight/linux/flutter/: generated_plugins.cmake
app/client/pathlight/linux/runner/: my_application.cc
app/client/pathlight/macos/Runner.xcodeproj/: project.pbxproj
app/client/pathlight/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/client/pathlight/macos/Runner/Configs/: AppInfo.xcconfig
app/client/pathlight/web/: auth.html  index.html  manifest.json
app/client/pathlight/windows/: CMakeLists.txt
app/client/pathlight/windows/flutter/: generated_plugins.cmake
app/client/pathlight/windows/runner/: Runner.rc  main.cpp
app/server/pathlight/: Cargo.toml
app/server/pathlight/config/: default.toml
app/server/pathlight/src/: config.rs  db.rs  main.rs
config/infra/: .env  docker-compose.yml
config/scripts/: create.just  db.just  generate.just  setup.just  start.just  stop.just  test.just
domain/auth/backend/: Cargo.toml
domain/auth/backend/src/: lib.rs
domain/auth/backend/src/integration/shared/: claims.rs  middleware.rs  mod.rs  validation.rs
domain/auth/frontend/: pubspec.yaml
domain/auth/frontend/core/: Cargo.toml
domain/auth/frontend/core/src/: domain.rs  lib.rs  system.rs
domain/auth/frontend/core/src/api/: lifetime.rs  mod.rs
domain/auth/frontend/core/src/api/command/: mod.rs  set_tokens.rs  trigger_refresh.rs
domain/auth/frontend/core/src/api/selector/: logged_in.rs  mod.rs  needs_refresh.rs
domain/auth/frontend/core/src/integration/shared/: api_generator.rs  auth_interceptor.rs  mod.rs  retry.rs
domain/auth/frontend/lib/: main.dart
domain/auth/frontend/lib/src/: auth_helper.dart  auth_notifier.dart  auth_page.dart  auth_provider.dart  auth_router.dart  auth_router.gr.dart  auth_screen.dart
domain/shared/api/v1/: guid.proto  pagination.proto
domain/shared/flutter_rust/: .metadata  README.md  ffigen.yaml  frb_config.yaml  pubspec.yaml
domain/shared/flutter_rust/lib/: auth.dart  main.dart  todo.dart
domain/shared/flutter_rust/rust/: Cargo.toml
domain/shared/flutter_rust/rust/src/: frb_generated.rs  lib.rs
domain/shared/flutter_rust/rust/src/api/: logging.rs  mod.rs
domain/shared/flutter_rust/rust/src/api/auto_gateway/auth/: command.rs  lifetime.rs  mod.rs  selector.rs
domain/shared/flutter_rust/rust/src/api/auto_gateway/todo/: command.rs  lifetime.rs  selector.rs
domain/shared/rust_utils/: Cargo.toml
domain/shared/rust_utils/src/: lib.rs  pagination.rs  result_to_response.rs
domain/shared/state_machine/flutter/: pubspec.yaml
domain/shared/state_machine/flutter/lib/: flutter.dart
domain/shared/state_machine/flutter/lib/src/: fractal_widget.dart
domain/shared/state_machine/rust/: Cargo.toml
domain/shared/state_machine/rust/src/: command.rs  context.rs  domain.rs  engine.rs  lib.rs  lifetime.rs  network.rs  reaction.rs  selector.rs
domain/todo/api/v1/: request.proto  response.proto  service.proto
domain/todo/backend/: Cargo.toml
domain/todo/backend/src/: lib.rs  service.rs
domain/todo/backend/src/add_todo_list/: command.rs  map.rs  query.rs
domain/todo/backend/src/core/: mod.rs
domain/todo/backend/src/endpoints/: mod.rs
domain/todo/backend/src/endpoints/add_todo_list/: command.rs  map.rs  query.rs
domain/todo/backend/src/endpoints/get_todo_list/: command.rs  map.rs  mod.rs  model.rs  query.rs
domain/todo/backend/src/get_todo_list/: command.rs  map.rs  query.rs
domain/todo/backend/src/integration/domain/auth/: mod.rs
domain/todo/db/: 20260406185835_create_todos_table.sql  20260421215516_fix_permissions.sql
domain/todo/frontend/: .flutter-plugins-dependencies  analysis_options.yaml  frb_config.yaml  pubspec.yaml
domain/todo/frontend/core/: Cargo.toml
domain/todo/frontend/core/src/: authenticated_api.rs  domain.rs  lib.rs  system.rs
domain/todo/frontend/core/src/api/: lifetime.rs  mod.rs
domain/todo/frontend/core/src/api/commands/: add_todo.rs  load_todos.rs  mod.rs
domain/todo/frontend/core/src/api/selectors/: todo_list.rs
domain/todo/frontend/core/src/integration/domain/auth/: mod.rs
domain/todo/frontend/lib/: frontend.dart  main.dart
domain/todo/frontend/lib/src/: home.dart  home_screen.dart  router.dart  router.gr.dart  todo_page.dart  todo_system.dart
infra/: init.sql
infra/caddy/: Caddyfile
scripts/: db.just  generate.just  setup.just  start.just  stop.just  test.just  todos.db
test/flutter/: architecture_test.dart
test/rust/: Cargo.toml
test/rust/tests/: arch_test.rs
