[workspace]
resolver = "2"

members = [
    "app/server/pathlight", 
    "domain/*/backend",
    "domain/*/frontend/core",
    "domain/*/api/generated/client",
    "domain/*/api/generated/server",
    "domain/shared/api/generated/models",
    "domain/shared/flutter_rust/rust",
    "domain/shared/rust_utils",
    "domain/shared/state_machine/rust",
    "test/rust",
]

# Centralized dependencies for the entire monorepo
[workspace.dependencies]
tokio = { version = "1.51.1", default-features = false, features = ["sync", "macros"] }
tonic = { version = "0.14.5", default-features = false,features = ["codegen"] }
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.4.0"
tonic-web-wasm-client = "0.9.1"
prost = { version = "0.14.3" }
tonic-prost = "0.14.5"
tonic-web = { version = "0.14.5" }
figment = { version = '0.10', features = ['toml', 'env'] }
tracing = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter'] }
thiserror = '2.0'
anyhow = '1.0'
serde = { version = '1.0.228', features = ['derive'] }
serde_json = '^1.0'
serde_repr = '^0.1'
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.8", features = ["v4"] }
flutter_rust_bridge = "2.12.0"
walkdir = "2.5.0" 
syn = {version ="2.0", features = ["full", "extra-traits"]}
quote = "1.0"
env_logger = "0.11"
once_cell = "1.19"
regex="1.12.3"
axum = "0.8.9"
hyper = "1.9.0"
reqwest ="0.13.2"
jsonwebtoken = "10.3.0"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"

# workspace crates
rust-utils = { path = "domain/shared/rust_utils" }
shared-models = { path = "domain/shared/api/generated/models" }
todo-api-client = { path = "domain/todo/api/generated/client" }
todo-api-server = { path = "domain/todo/api/generated/server" }
todo-backend = { path = "domain/todo/backend" }
todo_frontend_core = { path = "domain/todo/frontend/core" }
auth-backend ={ path = "domain/auth/backend"}
auth_frontend_core ={ path = "domain/auth/frontend/core" }
flutter_rust = { path = "domain/shared/flutter_rust" }
state_machine = { path = "domain/shared/state_machine/rust" }

[workspace.lints.rust]
unsafe_code = "deny"
# Warn on unused variables, imports, etc.
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "allow"

[workspace.lints.clippy]
# 1. The "Pedantic" Group: Turns on the strict rules
pedantic = { level = "warn", priority = -1 }

implicit_return = 'deny'

# 2. Production Safety: Ban panicking macros in backend code
unwrap_used = "deny"     # Forces you to handle Options properly
expect_used = "deny"     # Forces you to handle Results properly
panic = "deny"           # Banning explicit panics
todo = "warn"            # Reminds you before you commit a missing feature
unimplemented = "warn"   # Same as todo

# 3. Pragmatic Allowances: Turn off the pedantic rules that are just annoying
module_name_repetitions = "allow" # Sometimes 'todo::TodoItem' makes sense
missing_errors_doc = "allow"      # Good for public crates, overkill for internal APIs
missing_panics_doc = "allow"      # We banned panics anyway!
must_use_candidate = "allow"      # Too noisy for simple getter methods
