
[package]
name = "auth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Inherit from workspace
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
tracing = { workspace = true }

[lints]
workspace = true
