[package]
name = "state_machine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
flutter_rust_bridge = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true } 
tonic = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net"] }
tonic = { workspace = true, features = ["transport"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tonic-web-wasm-client = { workspace = true }

[lints]
workspace = true
