[package]
name = "todo_frontend_core"
version = "0.1.0"
edition = "2024"

[dependencies]
todo-api-client = { workspace = true }
shared-models = { workspace = true }
state_machine = { workspace = true }
anyhow = { workspace = true }
flutter_rust_bridge = { workspace = true }
env_logger = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
